syntax ="proto3";
package payments;

service Bitcoin{
    rpc SendPayment(BTCPayRequest) returns (BTCPayResponse);
}
message BTCPayRequest {
    string from_addr =1;
    string to_addr =2;
    uint32 amount =3;
}
message BTCPayResponse{
    bool success =1;
    string message =2;
}